# routes/index.js
@@ -7,5 +7,6 @@ router.get('/', (req, res) => {
 });
 
 router.use('/users', require('./users'));
+router.use('/classes', require('./classes'));
 
 module.exports = router;
